--- a/documents.html
+++ b/documents.html
@@ -1518,10 +1518,10 @@
                                     </td>
                                      <td class="doc-date">2024</td>
                                     <td class="doc-actions">
-                                        <button class="btn btn-view" onclick="viewDocument('porfolio/udostovereniye-obzr-niro', 'Удостоверение о повышении квалификации')">
+                                        <button class="btn btn-view" onclick="viewDocument('porfolio/udostovereniye-obzr-niro.pdf', 'Удостоверение о повышении квалификации')">
                                             👁️ Просмотр
                                         </button>
-                                        <a href="porfolio/udostovereniye-obzr-niro" class="btn btn-download" download>
+                                        <a href="porfolio/udostovereniye-obzr-niro.pdf" class="btn btn-download" download>
                                             📥 Скачать
                                         </a>
                                     </td>
@@ -1607,8 +1607,8 @@
                                 <tr>
                                     <td>
                                         <div class="doc-name">
-                                            <span class="doc-icon">⭐</span>
-                                            <span>Грамота за II место в общем зачёте муниципального этапа игры "Нижегородская зарница"</span>
+                                            <span class="doc-icon">🎯</span>
+                                            <span>Грамота за II место в общем зачёте муниципального этапа игры "Нижегородская зарница" (младшая группа)</span>
                                         </div>
                                     </td>
                                     <td class="doc-date">2024</td>
@@ -1624,8 +1624,42 @@
                                 <tr>
                                     <td>
                                         <div class="doc-name">
-                                            <span class="doc-icon">🚦</span>
-                                            <span>Благодарность за работу с отрядом ЮИД</span>
+                                            <span class="doc-icon">🎯</span>
+                                            <span>Грамота за II место в общем зачёте муниципального этапа игры "Нижегородская зарница" (средняя группа)</span>
+                                        </div>
+                                    </td>
+                                    <td class="doc-date">2024</td>
+                                    <td class="doc-actions">
+                                        <button class="btn btn-view" onclick="viewDocument('images/dostizheniya-uchenikov/zarnitsa-2024-1.jpg', 'Грамота Юнармия')">
+                                            👁️ Просмотр
+                                        </button>
+                                        <a href="images/dostizheniya-uchenikov/zarnitsa-2024-1.jpg" class="btn btn-download" download>
+                                            📥 Скачать
+                                        </a>
+                                    </td>
+                                </tr>
+                                  <tr>
+                                    <td>
+                                        <div class="doc-name">
+                                            <span class="doc-icon">🎯</span>
+                                            <span>Грамота за II место в общем зачёте муниципального этапа игры "Зарница 2.0" (старшая группа группа)</span>
+                                        </div>
+                                    </td>
+                                    <td class="doc-date">2025</td>
+                                    <td class="doc-actions">
+                                        <button class="btn btn-view" onclick="viewDocument('images/dostizheniya-uchenikov/zarnitsa-2024-1.jpg', 'Грамота Юнармия')">
+                                            👁️ Просмотр
+                                        </button>
+                                        <a href="images/dostizheniya-uchenikov/zarnitsa-2024-1.jpg" class="btn btn-download" download>
+                                            📥 Скачать
+                                        </a>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <div class="doc-name">
+                                            <span class="doc-icon">⭐</span>
+                                            <span>Грамота за I место в номинации "Смотр строя и песни" Ассамблеи "Время выбрало нас"</span>
                                         </div>
                                     </td>
                                     <td class="doc-date">2025</td>
@@ -1634,40 +1668,6 @@
                                             👁️ Просмотр
                                         </button>
                                         <a href="documents/blagodarnost-yuid.pdf" class="btn btn-download" download>
-                                            📥 Скачать
-                                        </a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <div class="doc-name">
-                                            <span class="doc-icon">🎯</span>
-                                            <span>Диплом за участие в конкурсе "Зарница 2.0"</span>
-                                        </div>
-                                    </td>
-                                    <td class="doc-date">2024</td>
-                                    <td class="doc-actions">
-                                        <button class="btn btn-view" onclick="viewDocument('documents/diplom-zarnica.pdf', 'Диплом Зарница')">
-                                            👁️ Просмотр
-                                        </button>
-                                        <a href="documents/diplom-zarnica.pdf" class="btn btn-download" download>
-                                            📥 Скачать
-                                        </a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <div class="doc-name">
-                                            <span class="doc-icon">📜</span>
-                                            <span>Грамота МБОУ СШ № 2 за добросовестный труд</span>
-                                        </div>
-                                    </td>
-                                    <td class="doc-date">2025</td>
-                                    <td class="doc-actions">
-                                        <button class="btn btn-view" onclick="viewDocument('documents/gramota-shkola.pdf', 'Грамота школы')">
-                                            👁️ Просмотр
-                                        </button>
-                                        <a href="documents/gramota-shkola.pdf" class="btn btn-download" download>
                                             📥 Скачать
                                         </a>
                                     </td>
