--- a/documents.html
+++ b/documents.html
@@ -1642,7 +1642,7 @@
                                     <td>
                                         <div class="doc-name">
                                             <span class="doc-icon">🎯</span>
-                                            <span>Грамота за II место в общем зачёте муниципального этапа игры "Зарница 2.0" (старшая группа группа)</span>
+                                            <span>Грамота за II место в общем зачёте муниципального этапа игры "Зарница 2.0" (старшая группа)</span>
                                         </div>
                                     </td>
                                     <td class="doc-date">2025</td>
@@ -1684,7 +1684,7 @@
                     <div class="accordion-title">
                         <span class="accordion-icon">📄</span>
                         <span>Сертификаты публикаций</span>
-                        <span class="accordion-badge">6 документов</span>
+                        <span class="accordion-badge">3 документа</span>
                     </div>
                     <span class="accordion-arrow">▼</span>
                 </div>
@@ -1703,15 +1703,15 @@
                                     <td>
                                         <div class="doc-name">
                                             <span class="doc-icon">📜</span>
-                                            <span>Сертификат публикации: Рабочая программа ОБЗР 8-11 классы</span>
+                                            <span>Сертификат публикации: Рабочая программа по ОБЗР для 8-9 классов</span>
                                         </div>
                                     </td>
-                                    <td class="doc-date">2024</td>
+                                    <td class="doc-date">2025</td>
                                     <td class="doc-actions">
-                                        <button class="btn btn-view" onclick="viewDocument('certificates/infourok-cert-1.pdf', 'Сертификат: Рабочая программа')">
+                                        <button class="btn btn-view" onclick="viewDocument('porfolio/infourok-cert-1.pdf', 'Сертификат: Рабочая программа')">
                                             👁️ Просмотр
                                         </button>
-                                        <a href="certificates/infourok-cert-1.pdf" class="btn btn-download" download>
+                                        <a href="porfolio/infourok-cert-1.pdf" class="btn btn-download" download>
                                             📥 Скачать
                                         </a>
                                     </td>
@@ -1719,16 +1719,16 @@
                                 <tr>
                                     <td>
                                         <div class="doc-name">
-                                            <span class="doc-icon">📋</span>
-                                            <span>Сертификат публикации: КТП по модулям ОБЗР</span>
+                                            <span class="doc-icon">📜</span>
+                                            <span>Сертификат публикации: Рабочая программа по ОБЗР для 10-11 классов/span>
                                         </div>
                                     </td>
-                                    <td class="doc-date">2024</td>
+                                    <td class="doc-date">2025</td>
                                     <td class="doc-actions">
-                                        <button class="btn btn-view" onclick="viewDocument('certificates/infourok-cert-2.pdf', 'Сертификат: КТП')">
+                                        <button class="btn btn-view" onclick="viewDocument('porfolio/infourok-cert-2.pdf', 'Сертификат: КТП')">
                                             👁️ Просмотр
                                         </button>
-                                        <a href="certificates/infourok-cert-2.pdf" class="btn btn-download" download>
+                                        <a href="porfolio/infourok-cert-2.pdf" class="btn btn-download" download>
                                             📥 Скачать
                                         </a>
                                     </td>
@@ -1737,66 +1737,15 @@
                                     <td>
                                         <div class="doc-name">
                                             <span class="doc-icon">📝</span>
-                                            <span>Сертификат публикации: Методические разработки уроков</span>
+                                            <span>Сертификат публикации: Дополнительная общеобразовательная общеразвивающая программа "Юнармия"</span>
                                         </div>
                                     </td>
                                     <td class="doc-date">2025</td>
                                     <td class="doc-actions">
-                                        <button class="btn btn-view" onclick="viewDocument('certificates/infourok-cert-3.pdf', 'Сертификат: Методразработки')">
+                                        <button class="btn btn-view" onclick="viewDocument('porfolio/infourok-cert-3.pdf', 'Сертификат: Методразработки')">
                                             👁️ Просмотр
                                         </button>
-                                        <a href="certificates/infourok-cert-3.pdf" class="btn btn-download" download>
-                                            📥 Скачать
-                                        </a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <div class="doc-name">
-                                            <span class="doc-icon">🎓</span>
-                                            <span>Сертификат публикации: Программа учебных сборов</span>
-                                        </div>
-                                    </td>
-                                    <td class="doc-date">2024</td>
-                                    <td class="doc-actions">
-                                        <button class="btn btn-view" onclick="viewDocument('certificates/infourok-cert-4.pdf', 'Сертификат: Учебные сборы')">
-                                            👁️ Просмотр
-                                        </button>
-                                        <a href="certificates/infourok-cert-4.pdf" class="btn btn-download" download>
-                                            📥 Скачать
-                                        </a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <div class="doc-name">
-                                            <span class="doc-icon">📊</span>
-                                            <span>Сертификат публикации: Контрольно-измерительные материалы</span>
-                                        </div>
-                                    </td>
-                                    <td class="doc-date">2025</td>
-                                    <td class="doc-actions">
-                                        <button class="btn btn-view" onclick="viewDocument('certificates/infourok-cert-5.pdf', 'Сертификат: КИМ')">
-                                            👁️ Просмотр
-                                        </button>
-                                        <a href="certificates/infourok-cert-5.pdf" class="btn btn-download" download>
-                                            📥 Скачать
-                                        </a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <div class="doc-name">
-                                            <span class="doc-icon">🎖️</span>
-                                            <span>Сертификат публикации: Программа внеурочной деятельности "Юнармия"</span>
-                                        </div>
-                                    </td>
-                                    <td class="doc-date">2024</td>
-                                    <td class="doc-actions">
-                                        <button class="btn btn-view" onclick="viewDocument('certificates/infourok-cert-6.pdf', 'Сертификат: Юнармия')">
-                                            👁️ Просмотр
-                                        </button>
-                                        <a href="certificates/infourok-cert-6.pdf" class="btn btn-download" download>
+                                        <a href="porfolio/infourok-cert-3.pdf" class="btn btn-download" download>
                                             📥 Скачать
                                         </a>
                                     </td>
@@ -1807,12 +1756,12 @@
                 </div>
             </div>
 
-            <!-- БЛОК 5: Экспертные листы и отзывы -->
+            <!-- БЛОК 5: Приказы по школе -->
             <div class="accordion-item">
                 <div class="accordion-header" onclick="toggleAccordion(this)">
                     <div class="accordion-title">
                         <span class="accordion-icon">📋</span>
-                        <span>Экспертные листы и отзывы</span>
+                        <span>Приказы по школе</span>
                         <span class="accordion-badge">3 документа</span>
                     </div>
                     <span class="accordion-arrow">▼</span>
@@ -1832,49 +1781,49 @@
                                     <td>
                                         <div class="doc-name">
                                             <span class="doc-icon">📝</span>
-                                            <span>Экспертный лист открытого урока по модулю 2 "Военная подготовка"</span>
+                                            <span>О создании отряда юных инспекторов движения</span>
                                         </div>
                                     </td>
-                                    <td class="doc-date">15.10.2024</td>
+                                    <td class="doc-date">28.12.2024</td>
                                     <td class="doc-actions">
-                                        <button class="btn btn-view" onclick="viewDocument('documents/ekspert-list-1.pdf', 'Экспертный лист урока')">
+                                        <button class="btn btn-view" onclick="viewDocument('porfolio/prikaz-po-yuid.pdf', 'Приказ')">
                                             👁️ Просмотр
                                         </button>
-                                        <a href="documents/ekspert-list-1.pdf" class="btn btn-download" download>
+                                        <a href="porfolio/prikaz-po-yuid.pdf" class="btn btn-download" download>
                                             📥 Скачать
                                         </a>
                                     </td>
                                 </tr>
-                                <tr>
+                                  <tr>
                                     <td>
                                         <div class="doc-name">
-                                            <span class="doc-icon">💬</span>
-                                            <span>Отзыв о мастер-классе "Использование ИИ в преподавании ОБЗР"</span>
+                                            <span class="doc-icon">📝</span>
+                                            <span>О создании шольного отряда Всероссийского движения "Юнармия"</span>
                                         </div>
                                     </td>
-                                    <td class="doc-date">20.11.2024</td>
+                                    <td class="doc-date">29.08.2025</td>
                                     <td class="doc-actions">
-                                        <button class="btn btn-view" onclick="viewDocument('documents/otzyv-master-klass.pdf', 'Отзыв о мастер-классе')">
+                                        <button class="btn btn-view" onclick="viewDocument('porfolio/prikaz-po-yunarmii.pdf', 'Приказ')">
                                             👁️ Просмотр
                                         </button>
-                                        <a href="documents/otzyv-master-klass.pdf" class="btn btn-download" download>
+                                        <a href="porfolio/prikaz-po-yunarmii.pdf" class="btn btn-download" download>
                                             📥 Скачать
                                         </a>
                                     </td>
                                 </tr>
-                                <tr>
+                                  <tr>
                                     <td>
                                         <div class="doc-name">
-                                            <span class="doc-icon">🎖️</span>
-                                            <span>Отзыв военкомата о проведении учебно-полевых сборов</span>
+                                            <span class="doc-icon">📝</span>
+                                            <span>О распределении заведования учебными кабинетами</span>
                                         </div>
                                     </td>
-                                    <td class="doc-date">30.05.2024</td>
+                                    <td class="doc-date">29.08.2024</td>
                                     <td class="doc-actions">
-                                        <button class="btn btn-view" onclick="viewDocument('documents/otzyv-voenkomat.pdf', 'Отзыв военкомата')">
+                                        <button class="btn btn-view" onclick="viewDocument('porfolio/prikaz-po-kabinetu.pdf', 'Приказ')">
                                             👁️ Просмотр
                                         </button>
-                                        <a href="documents/otzyv-voenkomat.pdf" class="btn btn-download" download>
+                                        <a href="porfolio/prikaz-po-kabinetu.pdf" class="btn btn-download" download>
                                             📥 Скачать
                                         </a>
                                     </td>
