--- a/mediaarhiv.html
+++ b/mediaarhiv.html
@@ -870,7 +870,7 @@
                             <li><a href="rezultaty-obucheniya.html">Результаты освоения ОБЗР обучающимися</a></li>
                             <li><a href="dostizheniya-uchenikov.html">Достижения учащихся</a></li>
                             <li><a href="metodicheskaya-aktivnost.html">Методическая активность</a></li>
-                            <li><a href="dokumenty-portfolio.html">Документы портфолио</a></li>
+                            <li><a href="dokuments.html">Документы портфолио</a></li>
                         </ul>
                     </li>
 
