--- a/mediaarhiv.html
+++ b/mediaarhiv.html
@@ -971,9 +971,9 @@
         <div class="media-gallery" id="mediaGallery">
           <!-- ФОТО 1: Учебные сборы -->
 <div class="media-item" data-type="photo" data-event="sbory" onclick="openLightboxByElement(this)">
-    <div class="media-placeholder">🏕️</div>
+    <img src="images/gallery/sbory-1.jpg" alt="Сборы в УЦ "Гвардеец" 2023 год">
     <div class="media-item-overlay">
-        📅 Ноябрь 2025 • Учебно-полевые сборы
+        📅 Декабрь 2023 • Учебно-полевые сборы
     </div>
 </div>
 
@@ -987,10 +987,10 @@
 
 <!-- ВИДЕО 1: Учебные сборы -->
 <div class="media-item" data-type="video" data-event="sbory" onclick="openLightboxByElement(this)">
-    <div class="media-placeholder">🎥</div>
+    <img src="video/gallery/sbory_2023_1_V1.mp4" alt="Сборы в УЦ "Гвардеец" 2023 год">
     <div class="media-video-badge">▶ ВИДЕО</div>
     <div class="media-item-overlay">
-        📅 Ноябрь 2025 • Огневая подготовка
+        📅 Декабрь 2023 • Учебно-полевые сборы
     </div>
 </div>
 
