--- a/mediaarhiv.html
+++ b/mediaarhiv.html
@@ -971,7 +971,7 @@
         <div class="media-gallery" id="mediaGallery">
           <!-- ФОТО 1: Учебные сборы -->
 <div class="media-item" data-type="photo" data-event="sbory" onclick="openLightboxByElement(this)">
-    <img src="images/gallery/sbory-1.jpg" alt="Сборы в УЦ "Гвардеец" 2023 год">
+    <img src="images/gallery/sbory-2023-1.jpg" alt="Сборы в УЦ "Гвардеец" 2023 год">
     <div class="media-item-overlay">
         📅 Декабрь 2023 • Учебно-полевые сборы
     </div>
@@ -987,7 +987,7 @@
 
 <!-- ВИДЕО 1: Учебные сборы -->
 <div class="media-item" data-type="video" data-event="sbory" onclick="openLightboxByElement(this)">
-    <img src="video/gallery/sbory_2023_1_V1.mp4" alt="Сборы в УЦ "Гвардеец" 2023 год">
+    <img src="video/gallery/sbory-2023-1.mp4" alt="Сборы в УЦ "Гвардеец" 2023 год">
     <div class="media-video-badge">▶ ВИДЕО</div>
     <div class="media-item-overlay">
         📅 Декабрь 2023 • Учебно-полевые сборы
