--- a/mediaarhiv.html
+++ b/mediaarhiv.html
@@ -987,7 +987,7 @@
 
 <!-- ВИДЕО 1: Учебные сборы -->
 <div class="media-item" data-type="video" data-event="sbory" onclick="openLightboxByElement(this)">
-    <img src="video/gallery/sbory-2023-1.mp4" alt="Сборы в УЦ "Гвардеец" 2023 год">
+   <video src="video/gallery/sbory-2023-1.mp4" poster="images/gallery/sbory-2023-1-thumbnail.jpg" controls></video>
     <div class="media-video-badge">▶ ВИДЕО</div>
     <div class="media-item-overlay">
         📅 Декабрь 2023 • Учебно-полевые сборы
