--- a/mediaarhiv.html
+++ b/mediaarhiv.html
@@ -964,6 +964,8 @@
         <button class="filter-btn" onclick="filterEvent('excursion', this)">Экскурсии</button>
         <button class="filter-btn" onclick="filterEvent('competition', this)">Соревнования</button>
         <button class="filter-btn" onclick="filterEvent('yunarmiya', this)">Юнармия</button>
+        <button class="filter-btn" onclick="filterEvent('yuid', this)">ЮИД</button>
+        <button class="filter-btn" onclick="filterEvent('drugiye', this)">Другие события</button>
     </div>
 </div>
 
@@ -979,9 +981,9 @@
 
 <!-- ФОТО 2: Учебные сборы -->
 <div class="media-item" data-type="photo" data-event="sbory" onclick="openLightboxByElement(this)">
-    <div class="media-placeholder">🎖️</div>
+   <img src="images/gallery/antey-2024-1.jpg" alt="Стрелковый клуб "Антей" 2024 год">
     <div class="media-item-overlay">
-        📅 Ноябрь 2025 • Строевая подготовка
+        📅 Декабрь 2024 • Огневая подготовка
     </div>
 </div>
 
@@ -996,75 +998,99 @@
 
 <!-- ФОТО 3: Зарница -->
 <div class="media-item" data-type="photo" data-event="zarnica" onclick="openLightboxByElement(this)">
-    <div class="media-placeholder">🎯</div>
+   <img src="images/gallery/zarnica-2024-1.jpg" alt="Нижегородская зарница 2024 год">
     <div class="media-item-overlay">
-        📅 Октябрь 2025 • Зарница 2.0 - региональный этап
+        📅 Март 2024 • Нижегородская зарница - региональный этап
     </div>
 </div>
 
 <!-- ФОТО 4: Зарница -->
 <div class="media-item" data-type="photo" data-event="zarnica" onclick="openLightboxByElement(this)">
-    <div class="media-placeholder">🏆</div>
+    <img src="images/gallery/zarnica-2024-5.jpg" alt="Нижегородская зарница 2024 год"> 
     <div class="media-item-overlay">
-        📅 Октябрь 2025 • Награждение победителей Зарницы
+        📅 Март 2024 • Нижегородская зарница - региональный этап
     </div>
 </div>
 
-<!-- ВИДЕО 2: Зарница -->
-<div class="media-item" data-type="video" data-event="zarnica" onclick="openLightboxByElement(this)">
-    <div class="media-placeholder">🎬</div>
+<!-- ВИДЕО 2: Антей -->
+<div class="media-item" data-type="video" data-event="sbory" onclick="openLightboxByElement(this)">
+    <video src="video/gallery/antey-2025-1.mp4" poster="images/gallery/sbory-2023-1-thumbnail.jpg" controls></video>
     <div class="media-video-badge">▶ ВИДЕО</div>
     <div class="media-item-overlay">
-        📅 Октябрь 2025 • Зарница 2.0 - лучшие моменты
+        📅 Сентябрь 2025 • Стрелковый клуб "Антей"
     </div>
 </div>
 
 <!-- ФОТО 5: Экскурсия -->
 <div class="media-item" data-type="photo" data-event="excursion" onclick="openLightboxByElement(this)">
-    <div class="media-placeholder">🚒</div>
+  <img src="images/gallery/vch-kstovo-2024-1.jpg" alt="Экскурсия в военную часть г.Кстово 2024 год">  
     <div class="media-item-overlay">
-        📅 Сентябрь 2025 • Экскурсия в пожарную часть
+        📅 Декабрь 2024 • Экскурсия в воинскую часть г.Кстово 
     </div>
 </div>
 
 <!-- ФОТО 6: Экскурсия -->
 <div class="media-item" data-type="photo" data-event="excursion" onclick="openLightboxByElement(this)">
-    <div class="media-placeholder">👨‍🚒</div>
+  <img src="images/gallery/vch-kstovo-2024-2.jpg" alt="Экскурсия в военную часть г.Кстово 2024 год">  
     <div class="media-item-overlay">
-        📅 Сентябрь 2025 • Знакомство с пожарной техникой
+        📅 Декабрь 2024 • Экскурсия в воинскую часть г.Кстово
     </div>
 </div>
 
 <!-- ФОТО 7: Соревнования -->
 <div class="media-item" data-type="photo" data-event="competition" onclick="openLightboxByElement(this)">
-    <div class="media-placeholder">🥇</div>
+   <img src="images/gallery/sorevnovaniya-po-stryelbye-2024-1.jpg" alt="Соревнования по стрельбе 2024 год">   
     <div class="media-item-overlay">
-        📅 Август 2025 • Соревнования по военно-прикладным видам спорта
+        📅 Февраль 2024 • Соревнования по стрельбе из электронного оружия
     </div>
 </div>
 
 <!-- ФОТО 8: Юнармия -->
 <div class="media-item" data-type="photo" data-event="yunarmiya" onclick="openLightboxByElement(this)">
-    <div class="media-placeholder">⭐</div>
+   <img src="images/gallery/yunarmiya-9-maya-2025-1.jpg" alt="Чествование ветерана 9 мая 2025 год">    
     <div class="media-item-overlay">
-        📅 Июнь 2025 • Юнармейская смена в лагере
+        📅 Май 2025 • Чествование ветерана в День Победы
     </div>
 </div>
 
 <!-- ФОТО 9: Юнармия -->
 <div class="media-item" data-type="photo" data-event="yunarmiya" onclick="openLightboxByElement(this)">
-    <div class="media-placeholder">🎖️</div>
+ <img src="images/gallery/yunarmiya-1-09-2025.jpg" alt="Вынос знамени 1 сентября 2025 год">    
     <div class="media-item-overlay">
-        📅 Июнь 2025 • Торжественное принятие в Юнармию
+        📅 Сентябрь 2025 • Торжественный вынос знамени на линейке 1 сентября 2025 года
+    </div>
+</div>
+            
+<!-- ФОТО 10: ЮИД -->
+<div class="media-item" data-type="photo" data-event="yuid" onclick="openLightboxByElement(this)">
+ <img src="images/gallery/yuid-2024-1.jpg" alt="Профилактика ДТТ 2024 год">    
+    <div class="media-item-overlay">
+        📅 Ноябрь 2024 • Профилактика дорожно-транспортного травматизма 2024 года
     </div>
 </div>
 
-<!-- ВИДЕО 3: Юнармия -->
-<div class="media-item" data-type="video" data-event="yunarmiya" onclick="openLightboxByElement(this)">
-    <div class="media-placeholder">📹</div>
+ <!-- ФОТО 11: День призывника -->
+<div class="media-item" data-type="photo" data-event="drugiye" onclick="openLightboxByElement(this)">
+ <img src="images/gallery/dyen-prizyvnika-2024-1.jpg" alt="День призывника в РДК 2024 год">    
+    <div class="media-item-overlay">
+        📅 Апрель 2024 • День призывника в РДК 2024 года
+    </div>
+</div> 
+
+ <!-- ФОТО 12: День призывника -->
+<div class="media-item" data-type="photo" data-event="drugiye" onclick="openLightboxByElement(this)">
+ <img src="images/gallery/urok-po-pb-2025-1.jpg" alt="Урок пожарной безопасности 2025 год">    
+    <div class="media-item-overlay">
+        📅 Октябрь 2025 • Урок пожарной безопасности 2025 года
+    </div>
+</div>  
+
+<!-- ВИДЕО 3: Повышение квалификации в УЦ "Гвардеец" -->
+<div class="media-item" data-type="video" data-event="drugiye" onclick="openLightboxByElement(this)">
+    <video src="video/gallery/kursy-obzr-2025-1.mp4" poster="images/gallery/sbory-2023-1-thumbnail.jpg" controls></video>
     <div class="media-video-badge">▶ ВИДЕО</div>
     <div class="media-item-overlay">
-        📅 Июнь 2025 • Клятва юнармейца
+        📅 Сентябрь 2025 • Курсы повышения квалификации в УЦ "Гвардеец"
     </div>
 </div>   
         </div>
