--- a/mediaarhiv.html
+++ b/mediaarhiv.html
@@ -975,7 +975,7 @@
 <div class="media-item" data-type="photo" data-event="sbory" onclick="openLightboxByElement(this)">
     <img src="images/gallery/sbory-2023-1.jpg" alt="Сборы в УЦ "Гвардеец" 2023 год">
     <div class="media-item-overlay">
-        📅 Декабрь 2023 • Учебно-полевые сборы
+        📅 Декабрь 2023 • Учебно-полевые сборы в УЦ "Гвардеец"
     </div>
 </div>
 
@@ -983,7 +983,7 @@
 <div class="media-item" data-type="photo" data-event="sbory" onclick="openLightboxByElement(this)">
    <img src="images/gallery/antey-2024-1.jpg" alt="Стрелковый клуб "Антей" 2024 год">
     <div class="media-item-overlay">
-        📅 Декабрь 2024 • Огневая подготовка
+        📅 Декабрь 2024 • Огневая подготовка в трелковом клубе "Антей"
     </div>
 </div>
 
@@ -992,7 +992,7 @@
    <video src="video/gallery/sbory-2023-1.mp4" poster="images/gallery/sbory-2023-1-thumbnail.jpg" controls></video>
     <div class="media-video-badge">▶ ВИДЕО</div>
     <div class="media-item-overlay">
-        📅 Декабрь 2023 • Учебно-полевые сборы
+        📅 Декабрь 2023 • Учебно-полевые сборы в УЦ "Гвардеец"
     </div>
 </div>
 
@@ -1057,7 +1057,7 @@
 <div class="media-item" data-type="photo" data-event="yunarmiya" onclick="openLightboxByElement(this)">
  <img src="images/gallery/yunarmiya-1-09-2025.jpg" alt="Вынос знамени 1 сентября 2025 год">    
     <div class="media-item-overlay">
-        📅 Сентябрь 2025 • Торжественный вынос знамени на линейке 1 сентября 2025 года
+        📅 Сентябрь 2025 • Торжественный вынос знамени на линейке в "День знаний"
     </div>
 </div>
             
@@ -1065,7 +1065,7 @@
 <div class="media-item" data-type="photo" data-event="yuid" onclick="openLightboxByElement(this)">
  <img src="images/gallery/yuid-2024-1.jpg" alt="Профилактика ДТТ 2024 год">    
     <div class="media-item-overlay">
-        📅 Ноябрь 2024 • Профилактика дорожно-транспортного травматизма 2024 года
+        📅 Ноябрь 2024 • Профилактика дорожно-транспортного травматизма 
     </div>
 </div>
 
@@ -1073,7 +1073,7 @@
 <div class="media-item" data-type="photo" data-event="drugiye" onclick="openLightboxByElement(this)">
  <img src="images/gallery/dyen-prizyvnika-2024-1.jpg" alt="День призывника в РДК 2024 год">    
     <div class="media-item-overlay">
-        📅 Апрель 2024 • День призывника в РДК 2024 года
+        📅 Апрель 2024 • День призывника в РДК 
     </div>
 </div> 
 
@@ -1081,7 +1081,7 @@
 <div class="media-item" data-type="photo" data-event="drugiye" onclick="openLightboxByElement(this)">
  <img src="images/gallery/urok-po-pb-2025-1.jpg" alt="Урок пожарной безопасности 2025 год">    
     <div class="media-item-overlay">
-        📅 Октябрь 2025 • Урок пожарной безопасности 2025 года
+        📅 Октябрь 2025 • Урок пожарной безопасности 
     </div>
 </div>  
 
