--- a/literature-projects.html
+++ b/literature-projects.html
@@ -1488,12 +1488,80 @@ window.addEventListener('load', () => {
                             </div>
                         </div>
                         <div class="chapter-content">
-                            <div class="chapter-text">Здесь размещается полный текст главы 1.
-
-Вставьте весь текст главы сюда. Переносы строк сохранятся автоматически.
-
-Вы можете использовать абзацы, просто разделяя их пустой строкой.
-
+                            <div class="chapter-text">Глава 1: Странное сообщение
+Мяч летел прямо в меня, и я знала — это мой момент.
+Прыжок. Блок!
+— Молодец, Козлова! — крикнул тренер. — Ещё пару таких блоков, и областная сборная точно наша!
+Я приземлилась, чувствуя, как адреналин разливается по венам. Волейбол — это моя стихия. Здесь всё понятно: есть правила, есть сетка, есть команда. Не то что в интернете, где...
+Бзз-бзз.
+Телефон завибрировал в рюкзаке у стены. Я проигнорировала. До конца тренировки ещё двадцать минут, мама убьёт, если узнает, что я отвлекаюсь на телефон.
+Бзз-бзз. Бзз-бзз.
+Настойчивый какой-то.
+— Козлова, приём! — крикнула Вика с другой стороны площадки.
+Я встряхнулась и вернулась в игру. Телефон может подождать.
+Но он не ждал. Вибрировал снова и снова, пока тренер наконец не свистнул, объявляя конец тренировки.
+— Так, девочки, в пятницу контрольная игра с восьмой школой. Не опаздывать!
+Я первая добежала до рюкзака. На экране — пять уведомлений от банка мамы. Мама добавила меня в уведомления, чтобы контролировать, сколько я трачу с дополнительной карты. Сердце ухнуло вниз.
+*"Списание 500₽. Покупка: RobloxGameStore. Карта 7293."
+Что?!
+Я не покупала ничего в Roblox! Вообще ничего! Последний раз я играла... вчера? Позавчера? И точно ничего не покупала — мама разрешает тратить только на день рождения.
+— Да что у тебя там? — Лера заглянула через плечо. — Ого, пятьсот рублей! Круто шопишься.
+— Я не... — начала я, но голос Кати из угла раздевалки прервал меня.
+— Три тысячи... — она сидела на скамейке, уставившись в свой телефон. Лицо белое, как стена. — Три тысячи рублей. Мама убьёт меня.
+— Что случилось? — я подошла к ней, всё ещё сжимая свой телефон.
+— Я... я не знаю! — в её голосе звучала паника. — Смотри!
+Она показала экран. Там было сообщение в Telegram:
+@digital_friend_bot: "Поздравляем! Вы выиграли 10,000 робуксов! Для получения приза подтвердите вашу игровую учётную запись. Это БЕСПЛАТНО! Просто введите данные карты для верификации возраста. Средства НЕ будут списаны!"
+Ниже — ссылка на какой-то сайт. RobIox.games. С большой буквой i вместо маленькой L — почти не заметно"
+— Катя... — я почувствовала, как по спине пробежал холодок. — Ты же не...
+— Вводила, — её голос упал до шёпота. — Вчера вечером. Они сказали, бесплатно же! А сейчас — бам! — она ткнула пальцем в экран. — Только что пришло уведомление. Три тысячи с моей карты! Всё, что на ней было!
+В раздевалке повисла тишина. Даже болтливая Вика замолчала.
+— Надо родителям сказать, — наконец произнесла Лера.
+— Не могу! — Катя практически закричала. — Они же... они заберут телефон! И планшет! И вообще всё! Мама говорила не связываться с незнакомцами в интернете, а я...
+Слёзы покатились по её щекам. Я села рядом, не зная, что сказать. Пятьсот рублей у меня, три тысячи у неё. Кто-то неплохо заработал.
+— А откуда этот бот узнал, что ты играешь в Roblox? — спросила я.
+— Не знаю... Может, из моего профиля в TikTok? Я там выкладывала видео с постройками...
+Бзз.
+Мой телефон снова завибрировал. Новое сообщение в Telegram.
+@digital_friend_bot: "Привет, Даша! Заметил, ты отличный игрок в Roblox. У меня есть эксклюзивное предложение только для избранных геймеров..."
+Кровь застыла в жилах. Я не давала этому боту свой номер. Я вообще его не знаю.
+— У меня тоже, — тихо сказала Аня с другого конца скамейки. — Пришло сообщение. Прямо сейчас.
+— И у меня, — добавила Вика.
+Мы переглянулись. Пять девочек. Пять сообщений. Один бот.
+— Это не случайность, — медленно произнесла я. — Кто-то за нами следит.
+Катя всхлипнула громче.
+— Что мне делать? Родители узнают — конец. Заберут всё, посадят под домашний арест. Я же хотела как лучше, думала, правда выиграла...
+Я посмотрела на сообщение от бота. Потом на Катю. Потом снова на сообщение.
+— Слушай, — я взяла её за руку. — Давай разберёмся. Вместе. Выясним, кто этот бот и как он нас нашёл.
+— Даш, ты что, с ума сошла? — Лера покачала головой. — Надо взрослым рассказать!
+— И что? — я повернулась к ней. — Что они сделают? Заберут телефоны, поставят родительский контроль на всё подряд, и мы будем как в тюрьме сидеть? Катя права — они паникуют и перекрывают кислород.
+— Но... — Вика прикусила губу. — А если станет хуже?
+Я задумалась. С одной стороны, Лера права — взрослые должны знать. С другой... Я представила лицо мамы. Её любимая фраза: "Я же говорила тебе быть осторожнее в интернете!" И потом — прощай, TikTok, прощай, свобода.
+— Давайте так, — предложила я. — Даём себе пару дней. Попробуем сами разобраться. Если не получится или станет опаснее — идём к родителям. Договорились?
+Девочки неуверенно закивали. Катя вытерла слёзы.
+— А что, если бот напишет снова?
+Я открыла сообщение от бота. Под текстом — три кнопки: "Получить бонус" "Узнать больше" "Пригласить друзей"
+— Не отвечаем, — твёрдо сказала я. — Вообще. Ни слова. И предупреждаем всех в классе.
+— Поздно, — Аня подняла телефон. — Я уже нажала "Узнать больше". Он прислал ссылку на какой-то сайт.
+— НЕ ПЕРЕХОДИ! — мы крикнули хором.
+— Да не дура я, — обиделась Аня. — Просто хотела посмотреть, что он пришлёт.
+Я взглянула на ссылку. Vkontakte-bonus.ru. Снова подделка — настоящий ВКонтакте никогда не использует дефисы в адресе.
+Домой я шла пешком, хотя обычно ездила на автобусе. Нужно было подумать.
+Пятьсот рублей — не такая уж большая сумма. Мама, конечно, расстроится, но не из-за денег, а из-за того, что я "повелась на мошенников". Из-за того, что была неосторожной. Из-за того, что не послушалась её предупреждений.
+Но ведь я ничего не делала! Не вводила данные карты, не переходила по ссылкам. Как они вообще...
+Стоп.
+Я остановилась посреди улицы. Вчера я скачала программу для бесплатных робуксов, которую Влад из параллельного класса скинул в общий чат. Сказал, она даёт бесплатные скины. Я скачала, установила, ввела логин и пароль от игры...
+Идиотка.
+Теперь понятно, откуда у них мои данные. И не только мои — наверняка половина школы скачала эту "чудо-программу".
+Телефон завибрировал снова.
+@digital_friend_bot: "Даша, я вижу, ты не ответила на моё предложение. Это очень грустно. Кстати, красивые фотографии в твоём TikTok. Особенно та, с волейбольных соревнований. Твоей маме бы понравилось..."
+Что?!
+Я судорожно открыла TikTok. Мой аккаунт был открытый, да, но откуда бот знает про маму? Я никогда не упоминала её в постах.
+Следующее сообщение пришло мгновенно:
+@digital_friend_bot: "Ольга Викторовна работает в IT, да? Интересно, что она скажет, когда узнает, что её дочь установила вирус на домашний компьютер..."
+Руки задрожали. Он знает имя мамы. Знает, где она работает. Знает про компьютер.
+Это уже не просто мошенничество.
+Это что-то гораздо хуже.
 <strong style="color: #003D7A;">Конец главы 1</strong></div>
                         </div>
                     </div>
@@ -1511,7 +1579,101 @@ window.addEventListener('load', () => {
                             </div>
                         </div>
                         <div class="chapter-content">
-                            <div class="chapter-text">Текст главы 2...
+                            <div class="chapter-text">Глава 2: Бот-помощник
+Библиотека была моим убежищем.
+Тихая, спокойная, с запахом старых книг и лимонного освежителя воздуха. Здесь никто не пялился на меня, не шептался за спиной, не делал вид, что случайно толкнул в коридоре.
+Я перевелась в эту школу всего месяц назад, но уже выучила главное правило выживания: быть невидимой.
+Альбом лежал передо мной раскрытый на чистой странице. Я рисовала портрет бабушки Маргариты Семёновны — по памяти, как всегда. Её добрые глаза, морщинки вокруг них, седые волосы, аккуратно собранные в пучок. Бабушка — бывшая учительница музыки, строгая, но любящая. Родители работают на Севере вахтовым методом, приезжают только два раза в год.
+"Лизонька, — говорила бабушка вчера за ужином, — ты слишком много времени проводишь одна. Почему не позовёшь кого-нибудь в гости?"
+Как ей объяснить, что в прошлой школе меня травили восемь месяцев? Что девочки создали чат "Лиза-жиртрест" на сорок человек? Что я до сих пор просыпаюсь в холодном поту от кошмаров?
+Бзз.
+Телефон завибрировал в кармане. Я нахмурилась — звук был на минимум, но в тишине библиотеки казался оглушительным.
+Сообщение от Миши Крылова.
+Миша Крылов: Привет! Видел твои рисунки в арт-группе ВК. Они потрясающие! 😊
+Я улыбнулась, чувствуя, как щёки теплеют. Миша Крылов — тихий парень из нашего класса. Мы познакомились онлайн две недели назад, когда он прокомментировал мой пейзаж в группе "Арт-таланты школы №47". В реальной жизни мы ни разу не разговаривали — я слишком стеснялась подойти.
+Лиза: Спасибо... Это всего лишь наброски
+Миша Крылов: Не скромничай! У тебя настоящий талант. Особенно портреты. Тот, с бабушкой — просто ВАУ
+Я перечитала сообщение три раза. Кто-то действительно заметил мои работы. Кто-то думает, что они хорошие.
+Миша Крылов: Слушай, есть классный бот в Telegram. Он анализирует арт-стиль и даёт советы по улучшению техники. Хочешь попробовать?
+Лиза: Бот? Не знаю... Звучит странно
+Миша Крылов: @art_master_bot — он реально крутой! Моя подруга из художки его использует. Помогает с композицией, светом, пропорциями. И бесплатно!
+Бесплатно — магическое слово. Родители зарабатывают хорошо, но всё уходит на лечение бабушкиного сердца. Курсы рисования — непозволительная роскошь.
+Лиза: А это безопасно?
+Миша Крылов: Конечно! Это же просто анализ изображений. Типа как фильтры в Instagram, только умнее. Я бы не советовал ерунду 😉
+Последний смайлик заставил меня улыбнуться ещё шире. Может, он правда обращает на меня внимание?
+Я открыла Telegram и нашла бота.
+@art_master_bot: Добро пожаловать, юный художник! Я помогу раскрыть твой творческий потенциал. Для начала пришли мне несколько своих работ, чтобы я мог проанализировать твой уникальный стиль.
+Звучало профессионально. Я сфотографировала портрет бабушки — ещё не законченный, но уже узнаваемый.
+@art_master_bot: Обрабатываю... Вау! Потрясающая работа с тенями. Чувствуется эмоциональная связь с моделью. Для более точного анализа, можешь прислать ещё 2-3 работы? Желательно разные стили.
+Я отправила пейзаж из парка и натюрморт с яблоками.
+@art_master_bot: Невероятно! Ты определённо талантлива. Особенно для своего возраста. Кстати, сколько тебе лет?
+Лиза: 13
+@art_master_bot: Отлично! В этом возрасте формируется индивидуальный стиль. Для составления персональной программы развития мне нужно лучше понять твою личность как художника. Можешь прислать селфи? Чтобы я увидел, как ты держишь карандаш, какая у тебя осанка при рисовании — это важно для техники.
+Что-то внутри меня напряглось. Селфи? Зачем боту моё фото?
+Но тут же пришло новое сообщение от Миши.
+Миша Крылов: Ну как? Попробовала бота?
+Лиза: Да, он просит прислать селфи для анализа техники...
+Миша Крылов: А, да, это нормально! Он анализирует, как ты сидишь, не портишь ли осанку. У художников часто проблемы со спиной. Забота о здоровье!
+Логично. Бабушка постоянно делает замечания, что я сутулюсь над альбомом.
+Я поднесла телефон, сделала фото — ничего особенного, кудрявые рыжие волосы, веснушки по всему лицу, зелёные глаза за очками. На заднем плане — стеллажи библиотеки.
+@art_master_bot: Спасибо! Вижу вдумчивого, серьёзного художника. И да — тебе стоит следить за осанкой, не наклоняйся слишком низко к бумаге. А теперь главное: я создам для тебя индивидуальную программу. Но сначала — можешь показать свой арт-уголок дома? Где ты обычно рисуешь?
+Дом... Маленькая комната у бабушки, стол у окна, полка с красками и карандашами.
+— Лиза?
+Я подняла голову. В проходе между стеллажами стояла Даша Козлова — популярная волейболистка из моего класса. В первый день она заступилась за меня, когда кто-то "случайно" пролил сок на мои рисунки. С тех пор я восхищалась ею издалека — Даша была всем, чем я не была: уверенной, спортивной, популярной.
+— Привет, — пробормотала я, инстинктивно прикрывая телефон.
+— Рисуешь? — Даша подошла ближе, разглядывая портрет. — Ого, это же... твоя бабушка?
+Я кивнула.
+— Талантливо, — искренне сказала она и села напротив. — Слушай, у тебя всё нормально?
+— Да, а что?
+— Ну... — Даша замялась, поправляя свой вечный хвост. — Просто вчера на тренировке случилась странная история. Какой-то бот в Telegram начал писать всем девочкам из команды. Обещает всякие бонусы, подарки...
+— Бот? — я нахмурилась, стараясь выглядеть безразличной. — Какой бот?
+— @digital_friend_bot, — Даша понизила голос. — Пишет всякую чушь про бонусы в играх, просит данные карт. Катя повелась — потеряла три тысячи.
+Моё сердце забилось быстрее. Другой бот. Не мой art_master.
+— Ужас, — искренне сказала я. — Мне такой не писал.
+— Повезло. Мы решили разобраться сами, пока родители не узнали. — Даша вздохнула, и я заметила тёмные круги под её глазами. — Если что-то странное заметишь — скажи, ладно?
+Я кивнула. Даша встала, но задержалась.
+— И ещё, Лиз... Если кто-то будет доставать тебя из-за рисунков или ещё чего — говори мне, хорошо? Я знаю, что в прошлой школе было... непросто.
+Откуда она знает? Я ничего не рассказывала.
+— Твоя бабушка и моя мама работали вместе в поликлинике когда-то, — объяснила Даша, заметив моё удивление. — Маргарита Семёновна волнуется за тебя.
+Комок подступил к горлу. Бабушка волнуется. Даша готова защищать. Может, в этой школе всё будет иначе?
+Даша ушла, а я вернулась к телефону.
+Миша Крылов: Эй, ты там? Не обижайся, если бот что-то не то сказал. Он иногда странный, но реально помогает!
+@art_master_bot: Лиза, ты всё ещё здесь? Не хочу давить, но твой талант действительно особенный. Было бы жаль не развить его. Если неудобно показывать дом, давай начнём с простого — пришли фото своих художественных материалов?
+Два сообщения одновременно. Забота с обеих сторон.
+"Наверное, я просто параноик," — подумала я. — "Из-за того, что было в прошлой школе."
+Фото материалов — это же не страшно? Просто карандаши и краски.
+Я сфотографировала свой пенал с карандашами.
+@art_master_bot: Отличный набор! Вижу, ты серьёзно относишься к творчеству. Знаешь что? У меня есть специальная программа для особо талантливых учеников. Полностью бесплатная. Нужно только зарегистрироваться через специальную форму. Интересно?
+Лиза: А что за программа?
+@art_master_bot: Персональные уроки, разбор твоих работ профессионалами, возможность участия в конкурсах. Даже стипендия возможна! Отправлю ссылку на регистрацию?
+Стипендия. Профессионалы. Бесплатно.
+Слишком хорошо, чтобы быть правдой — прошептал тихий голос в голове. Но может, мне просто везёт? Может, наконец-то что-то хорошее?
+Миша Крылов: Кстати, хотела спросить — может, встретимся как-нибудь? В реале? Можем вместе порисовать в парке :)
+Сердце пропустило удар. Миша хочет встретиться. Со мной. Девочкой, которую в прошлой школе называли "Лиза-жиртрест".
+@art_master_bot: Ссылка на регистрацию: art-talent-program.ru/register. Заполни анкету, и мы свяжемся с тобой в течение дня!
+Две возможности. Два пути вперёд. Что может пойти не так?
+Я нажала на ссылку.
+Страница загрузилась медленно. Простая форма: имя, возраст, телефон, адрес школы, примеры работ.
+И внизу, мелким шрифтом: "Загружая работы, вы даёте согласие на их использование в образовательных целях."
+Образовательные цели — это же нормально?
+Я начала заполнять форму. Лиза Абрамова. 13 лет. Телефон...
+Стоп.
+Зачем им мой адрес школы? И телефон?
+Я открыла чат с Мишей.
+Лиза: Бот просит много личных данных...
+Ответ пришёл мгновенно. Слишком быстро.
+Миша Крылов: Это для связи с родителями, если выиграешь стипендию! Не волнуйся, я тоже заполнял. Всё ок!
+Он тоже заполнял? Но Миша же не рисует...
+Что-то было не так. Что-то...
+Я открыла профиль Миши Крылова в ВК. Последний пост — три недели назад. Фотография с какого-то школьного мероприятия. Нигде ни слова о рисовании. Ни одного упоминания художки.
+Холодок пробежал по спине.
+Настоящий Миша Крылов — тихий парень, который сидит в последнем ряду и никогда не разговаривает с девочками. Я видела его сегодня утром — он прошёл мимо, даже не взглянув в мою сторону.
+Кто же тогда писал мне все эти две недели?
+Руки задрожали. Я посмотрела на свою фотографию, отправленную боту. На форму с личными данными. На предложение о встрече.
+"Наверное..." — начала я писать в ответ фейковому Мише, но остановилась.
+Нет. Хватит "наверное". Хватит сомневаться в себе.
+Я закрыла все вкладки, удалила начатое сообщение и пошла искать Дашу.
+
 
 <strong style="color: #003D7A;">Конец главы 2</strong></div>
                         </div>
