--- a/vneurochnaya.html
+++ b/vneurochnaya.html
@@ -798,7 +798,7 @@
                     <li>Участие в военно-патриотических мероприятиях</li>
                     <li>Спортивно-прикладная подготовка</li>
                 </ul>
-                <a href="detalnaya-stranica-2.html" class="info-block-button">Подробнее</a>
+                <a href="yunarmiya.html" class="info-block-button">Подробнее</a>
             </div> 
 
             <!-- БЛОК 2 (синий фон) -->
@@ -1468,3 +1468,4 @@ window.addEventListener('load', () => {
 </html>
 
  
+
