--- a/vneurochnaya.html
+++ b/vneurochnaya.html
@@ -813,7 +813,7 @@
                     <li>Проведение профилактических мероприятий для школьников</li>
                     <li>Создание агитационных материалов по безопасности на дорогах</li>
                 </ul>
-                <a href="detalnaya-stranica-3.html" class="info-block-button">Подробнее</a>
+                <a href="yuid.html" class="info-block-button">Подробнее</a>
             </div>
 
             <!-- БЛОК 3 (светлый фон - альтернатива) -->
@@ -1468,4 +1468,5 @@ window.addEventListener('load', () => {
 </html>
 
  
+
 
