--- a/yuid.html
+++ b/yuid.html
@@ -1543,7 +1543,7 @@
     </header>
 
     <main>
-       <h2 class="page-title"> <span class="info-block-icon"><img src="images/logo-yuid.jpg" alt="ЮИД" style="width: 80px; height: 60px; vertical-align: middle; margin-right: 0.5rem;">Юные инспекторы Движения (ЮИД)</span></h2> 
+       <h2 class="page-title"> <span class="info-block-icon"><img src="images/logo-yuid.jpg" alt="ЮИД" style="width: 100px; height: 80px; vertical-align: middle; margin-right: 0.5rem;">Юные инспекторы движения (ЮИД)</span></h2> 
         <p class="page-subtitle">
         Общероссийская общественная детско-юношеская организация по пропаганде безопасности дорожного движения
         </p>
