--- a/yunarmiya.html
+++ b/yunarmiya.html
@@ -1875,7 +1875,7 @@
             <div class="resources-list">
                 <div class="resource-item" onclick="openDocumentModal('presentation')">
                     <span class="resource-icon">📄</span>
-                    Программа кружка "Юнармия" на 2025-2026 учебный год (PDF)
+                   Дополнительная общеобразовательная общеразвивающая программа "Юнармия" на 2025-2026 учебный год (PDF)
                 </div>
                 <div class="resource-item" onclick="openDocumentModal('regulations')">
                     <span class="resource-icon">📅</span>
