--- a/yunarmiya.html
+++ b/yunarmiya.html
@@ -2442,11 +2442,12 @@
         // ============================================
         const documents = {
             'presentation': {
-                title: 'Программа кружка "Юнармия" на 2024-2025 учебный год',
+                title: 'Дополнительная программа "Юнармия" на 2025-2026 учебный год',
                 icon: '📊',
-                name: 'Программа кружка "Юнармия" на 2024-2025 учебный год',
+                name: 'Дополнительная программа "Юнармия" на 2025-2026 учебный год',
                 type: 'PDF',
-                description: 'Программа внеурочной деятельности военно-патриотической направленности'
+               description: 'Программа внеурочной деятельности военно-патриотической направленности'
+         url: 'documents/doop-yunarmiya-2025.pdf'
             },
             'regulations': {
                 title: 'Расписание занятий отряда "Вымпел"',
